--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,84 +1,78 @@
-.footer{
+.footer {
     color: #d9d9d9;
     background-color: #323232;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 20px 8vw;
+    padding: 40px 8vw;
     margin-top: 60px;
-    padding-top: 60px;
 }
 
-.footer-content{
+.footer-content {
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
-    gap: 80px;
+    gap: 60px;
 }
 
-.footer-content-left, .footer-content-right, .footer-content-center{
+.footer-content-left,
+.footer-content-right,
+.footer-content-center {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    gap: 20px;
+    gap: 16px;
 }
 
-.footer-content-left li .footer-content-right li , .footer-content-center li {
+.footer-content li {
     list-style: none;
-    margin-bottom: 10px;
     cursor: pointer;
 }
 
-.footer-content-right h2 , .footer-content-center h2 {
+.footer-content h2 {
     color: white;
-    margin-bottom: -15px;
 }
 
-.footer-social-icon img{
-    width: 40px;
-    margin-right: 15px;
+.footer-social-icon img {
+    width: 36px;
+    margin-right: 12px;
 }
 
-.footer hr{
+.footer hr {
     width: 100%;
-    height: 2px;
-    margin: 10px 0px ;
+    height: 1px;
+    margin: 20px 0;
     background-color: grey;
     border: none;
 }
 
-.footer-content-center ul{
-    margin-left: -40px;
+.footer-copyright {
+    text-align: center;
+    font-size: 13px;
 }
 
-.footer-content-right li{
-    list-style: none;
-    margin-left: -40px;
-    cursor: pointer;
-}
+/* Mobile */
+@media (max-width: 750px) {
+  /* Hide Company & Get in Touch */
+  .footer-content-center,
+  .footer-content-right {
+    display: none;
+  }
 
-.footer-copyright{
-    margin: 15px;
-}
-
-.footer-content-center h2{
-    margin-top: 5px;
-    margin-bottom: -5px;
-}
-
-.footer-content-right h2{
-    margin-top: 5px;
-    margin-bottom: -5px;
-}
-
-@media (max-width:750) {
-  .footer-content{
+  /* Center remaining content */
+  .footer-content {
     display: flex;
     flex-direction: column;
-    gap: 35px;
+    align-items: center;
   }
-  .footer-copyright{
+
+  .footer-content-left {
+    align-items: center;
     text-align: center;
+  }
+
+  .footer-social-icon {
+    display: flex;
+    justify-content: center;
   }
 }
